# averagecounter

./: CMakeLists.txt  README.md
src/: average_counter.cpp  average_counter.h  job.h  main.cpp  sum_job.cpp  sum_job.h  thread_pool.h
